Fix page overflow

--- a/styles/block/_contact-us.scss
+++ b/styles/block/_contact-us.scss
@@ -5,6 +5,7 @@
     position: relative;
     padding-top: 72px;
     padding-bottom: 110px;
+    overflow: hidden;
 
     @include mixin.media('tablet') {
         padding-top: 192px;
