--- a/styles/block/_page.scss
+++ b/styles/block/_page.scss
@@ -25,7 +25,6 @@
   }
 
   &__content {
-    overflow-x: hidden;
-    height: 100%;
+    overflow: hidden;
   }
 }
